--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 *.swp
 *.swo
 cache
-pelican.pid
-srv.pid
+*.pid
+*.pyc
+output
+
+// ignore pelican path config changes in the windows build tools
+pmake.cmd
+devserver.cmd
